# pHash.c

./: .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  Makefile  README.md  main.c  pHash.c  pHash.h  phash_demo  test_phash.c
.github/workflows/: cmake-single-platform.yml
